--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@
 *.log
 *.jou
 
-*.runs/
-*.sim/
-*.cache/
-*.hw/
-*.ioplanning/
-*.ip_user_files/
-.Xil/
+/*.runs
+/*.sim
+/*.cache
+/*.hw
+/*.ioplanning
+/*.ip_user_files
+/.Xil
 
 config.h
