--- a/vue/szlj-f/package.json
+++ b/vue/szlj-f/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "chart.js": "^4.4.7",
     "vue": "^3.5.13",
