--- a/szlj_vue/package.json
+++ b/szlj_vue/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "chart.js": "^4.4.7",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
